RESOLVED FIXED298344
didGeneratePageLoadTiming is called flakily when Site Isolation is disabled
https://bugs.webkit.org/show_bug.cgi?id=298344
Summary didGeneratePageLoadTiming is called flakily when Site Isolation is disabled
Ben Nham
Reported 2025-09-03 14:15:17 PDT
When Site Isolation is disabled, we don't clear the frames-with-pending-subresources map when navigating to a new page. This causes the didGeneratePageLoadTiming callback to be flaky when SI is disabled, since it can cause WebPageProxy to think that the newly committed page has outstanding subresource loads, when those loads are actually associated with the previous page.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-03 14:15:29 PDT
Ben Nham
Comment 2 2025-09-03 14:16:43 PDT
EWS
Comment 3 2025-09-06 09:11:17 PDT
Committed 299661@main (2a61c086943c): <https://commits.webkit.org/299661@main> Reviewed commits have been landed. Closing PR #50264 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.